[tool.poetry]
name = "simple-backend"
version = "0.0.1"
description = "Simple backend project using Fast API"
authors = ["milistu <studen.m98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
opencv-python-headless = "^4.9.0.80"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
pydub = "^0.25.1"
python-dotenv = "^1.0.0"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
